src/test/deca/syntax/invalid/not_provided/commentaire_multiligne_imbrique.deca
// Description:
//    Un "faux" commentaire: un /* sans */.
//
// Resultats:
//    Pas d'erreur pour le lexeur.
//    Erreur de syntaxe ligne 14:0.
//
// Historique:
//    cree le 05/01/2022

{
        println("Bonjour");
}
/* commentaire multiligne
sans fermeture